--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 				<p class="legend">添加软件源到 Sileo<span class="fa fa-hand-o-down"></span></p>
 				<a href="sileo://source/https://axs6.github.io/pro/" class="follow-button">添加</a>
 				<p class="legend"></span></p>
-				<p class="legend">添加A先生微信加入玩机群 <span class="fa fa-hand-o-down"></span></p>
-				<a href="https://t.me/oncar2/" class="follow-button">VCR66T</a>
+				<p class="legend">添加祁厅长微信安排正畜级 <span class="fa fa-hand-o-down"></span></p>
+				<a href="https://t.me/oncar2/" class="follow-button">胜天半子</a>
                                 <p class="legend"></span></p>
-			        <p class="legend">关注A先生B站 <span class="fa fa-hand-o-down"></span></p>
-				<a href="https://b23.tv/4VQxRIN">关注<</a>
+			        <p class="legend">关注贾队长卫视 <span class="fa fa-hand-o-down"></span></p>
+				<a href="https://weixin.qq.com/f/EHRGsBRk41vRk9Bk7ixnweg
+>关注<</a>
 		                <p class="legend"></span></p>
 		</form>
 		<p style="color:#ff0000;"><--- 不要为了越狱放弃升级的乐趣！---></p>
