--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 		<form action="#" method="post">
 				<p class="legend">添加软件源到 Sileo<span class="fa fa-hand-o-down"></span></p>
-				<a href="sileo://source/https://axs6.github.io/pro/" class="follow-button">添加</a>
+				<a href="sileo://source/https://qi-ting-zhang.github.io/repo/" class="follow-button">添加</a>
 				<p class="legend"></span></p>
 				<p class="legend">添加祁厅长微信安排正畜级 <span class="fa fa-hand-o-down"></span></p>
 				<a href="https://t.me/oncar2/" class="follow-button">胜天半子</a>
