--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 		</script>
 		<link rel="stylesheet" href="./css/style.css" type="text/css" media="all" />
 		<link href="css/font-awesome.min.css" rel="stylesheet">
+		<style>
+			.main-bg {
+                       background-image: url('bg.jpg');
+                       background-size: cover; /* 确保图片覆盖整个背景 */
+                       background-position: center; /* 图片居中 */
+                       background-repeat: no-repeat; /* 防止图片重复 */
+               } 
+		</style>
 	</head>
 	<body>
 		<div class="main-bg"/>
@@ -35,6 +43,14 @@
 		<p style="color:#ff0000;"><--- 不要为了越狱放弃升级的乐趣！---></p>
 		</br>
 		</br>
+		<!-- 背景音乐 -->
+		<audio id="background-music" loop>
+                <source src="bgm.mp3" type="audio/mpeg">
+                    您的浏览器不支持音频元素。
+                </audio>
+
+                <button onclick="document.getElementById('background-music').play()">播放</button>
+                <button onclick="document.getElementById('background-music').pause()">暂停</button>
 	</body>
 </html>
 			
