--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
 		<p style="color:#ff0000;"><--- 不要为了越狱放弃升级的乐趣！---></p>
 		</br>
 		</br>
-		 <!-- 背景音乐 -->
-                 <audio id="background-music" loop>
-                 <source src="bgm.mp3" type="audio/mpeg">
-                 您的浏览器不支持音频元素。
-                 </audio>
+		    <!-- 背景音乐 -->
+                <audio id="background-music" loop>
+                <source src="path/to/your/background-music.mp3" type="audio/mpeg">
+                您的浏览器不支持音频元素。
+                </audio>
 
-                  <!-- 播放和暂停按钮 -->
-                  <button type="button" onclick="document.getElementById('background-music').play()">播放</button>
-                  <button type="button" onclick="document.getElementById('background-music').pause()">暂停</button>
+                <!-- 播放和暂停按钮 -->
+                <div class="audio-controls">
+                <button type="button" onclick="document.getElementById('background-music').play()">播放</button>
+                <button type="button" onclick="document.getElementById('background-music').pause()">暂停</button>
 	</body>
 </html>
 			
