--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 				<a href="https://t.me/oncar2/" class="follow-button">胜天半子</a>
                                 <p class="legend"></span></p>
 			        <p class="legend">关注贾队长卫视 <span class="fa fa-hand-o-down"></span></p>
-				<a href="https://weixin.qq.com/f/EHRGsBRk41vRk9Bk7ixnweg
->关注<</a>
-		                <p class="legend"></span></p>
-		</form>
-		<p style="color:#ff0000;"><--- 不要为了越狱放弃升级的乐趣！---></p>
+				<a href="https://weixin.qq.com/f/EHRGsBRk41vRk9Bk7ixnweg">关注</a>
+                                <p class="legend"></span></p>
+               </form>
+                                <p style="color:#ff0000;">
+		                <--- <a href="https://weixin.qq.com/f/EHRGsBRk41vRk9Bk7ixnweg" style="text-decoration: none; color: inherit;">不要为了越狱放弃升级的乐趣！</a> ---></p>
+
 		</br>
 		</br>
 		    <!-- 背景音乐 -->
