--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</br>
 		    <!-- 背景音乐 -->
                 <audio id="background-music" loop>
-                <source src="path/to/your/background-music.mp3" type="audio/mpeg">
+                <source src="bgm.mp3" type="audio/mpeg">
                 您的浏览器不支持音频元素。
                 </audio>
 
