--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
                                 <p class="legend"></span></p>
 			        <p class="legend">关注贾队长卫视 <span class="fa fa-hand-o-down"></span></p>
 				<a href="https://weixin.qq.com/f/EHRGsBRk41vRk9Bk7ixnweg">关注</a>
-                                <p class="legend"></span></p>
-               </form>
-                                <p style="color:#ff0000;">
-		                <--- <a href="https://weixin.qq.com/f/EHRGsBRk41vRk9Bk7ixnweg" style="text-decoration: none; color: inherit;">不要为了越狱放弃升级的乐趣！</a> ---></p>
+<p class="legend"></span></p>
+</form>
+<p style="color:#ff0000;"><--- <a href="https://weixin.qq.com/f/EHRGsBRk41vRk9Bk7ixnweg" style="text-decoration: none; color: inherit;">不要为了越狱放弃升级的乐趣</a> ---></p>
 
 		</br>
 		</br>
