--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
 				<a href="https://t.me/oncar2/" class="follow-button">胜天半子</a>
                                 <p class="legend"></span></p>
 			        <p class="legend">关注贾队长卫视 <span class="fa fa-hand-o-down"></span></p>
-				<a href="https://weixin.qq.com/f/EHRGsBRk41vRk9Bk7ixnweg">关注</a>
-<p class="legend"></span></p>
-</form>
-<p style="color:#ff0000;"><--- <a href="https://weixin.qq.com/f/EHRGsBRk41vRk9Bk7ixnweg" style="text-decoration: none; color: inherit;">不要为了越狱放弃升级的乐趣</a> ---></p>
+				<a href="https://weixin.qq.com/f/EHRGsBRk41vRk9Bk7ixnweg" class="follow-button">表情</a>
+            <p class="legend"></span></p>
+        </form>
+        <p style="color:#ff0000;"><--- 不要为了越狱放弃升级的<a href="weixin://dl/scan" style="text-decoration: none; color: inherit;">表情</a>！ ---></p>
+
+        <br>
+        <a href="weixin://dl/scan">点击扫描二维码</a>
+        <br>
+        <img src="https://weixin.qq.com/f/ELV0mhdOGCdbzq-CWLZMMc8" alt="微信扫码">
+    </div>
+
 
 		</br>
 		</br>
