--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<a href="https://weixin.qq.com/f/EHRGsBRk41vRk9Bk7ixnweg" class="follow-button">表情</a>
             <p class="legend"></span></p>
         </form>
-        <p style="color:#ff0000;"><--- 不要为了越狱放弃升级的<a href="weixin://dl/scan" style="text-decoration: none; color: inherit;">表情</a>！ ---></p>
+        <p style="color:#ff0000;"><--- 不要为了越狱放弃升级的乐趣<a href="weixin://dl/scan" style="text-decoration: none; color: inherit;"></p>
     </div>
 		</br>
 		</br>
