--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 				<a href="https://t.me/oncar2/" class="follow-button">胜天半子</a>
                                 <p class="legend"></span></p>
 			        <p class="legend">关注贾队长卫视 <span class="fa fa-hand-o-down"></span></p>
-				<a href="https://b23.tv/4VQxRIN"><</a>
+				<a href="https://weixin.qq.com/sph/AhrrmuHXp
+">@进步<</a>
 		                <p class="legend"></span></p>
 		</form>
 		<p style="color:#ff0000;"><--- 不要为了越狱放弃升级的乐趣！---></p>
