--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <p class="legend"></span></p>
 			        <p class="legend">关注贾队长卫视 <span class="fa fa-hand-o-down"></span></p>
 				<a href="https://weixin.qq.com/sph/AhrrmuHXp
-">@进步<</a>
+">太想进步了</a>
 		                <p class="legend"></span></p>
 		</form>
 		<p style="color:#ff0000;"><--- 不要为了越狱放弃升级的乐趣！---></p>
