--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         <div class="audio-controls">
             <button type="button" onclick="document.getElementById('background-music').play()">播放</button>
             <button type="button" onclick="document.getElementById('background-music').pause()">暂停</button>
+        </div>
+    </div>
 	</body>
 </html>
 			
