--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<a href="sileo://source/https://qi-ting-zhang.github.io/repo/" class="follow-button">添加</a>
 				<p class="legend"></span></p>
 				<p class="legend">添加祁厅长微信安排正畜级 <span class="fa fa-hand-o-down"></span></p>
-				<a href="https://t.me/oncar2/" class="follow-button">胜天半子</a>
+				<a href="" class="follow-button">胜天半子</a>
                                 <p class="legend"></span></p>
 			        <p class="legend">关注贾队长卫视 <span class="fa fa-hand-o-down"></span></p>
 				<a href="https://weixin.qq.com/sph/AhrrmuHXp
@@ -43,12 +43,12 @@
             您的浏览器不支持音频元素。
         </audio>
 
-        <!-- 播放和暂停按钮 -->
+        <!-- 播放和暂停按钮 
         <div class="audio-controls">
             <button type="button" onclick="document.getElementById('background-music').play()">播放</button>
             <button type="button" onclick="document.getElementById('background-music').pause()">暂停</button>
         </div>
-    </div>
+    </div>-->
 	</body>
 </html>
 			
