--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 		</br>
 		</br>
 		    <!-- 背景音乐 -->
-            <audio id="background-music" loop>
-            <source src="bgm.mp3" type="audio/mpeg">
-            您的浏览器不支持音频元素。
-        </audio>
+            <audio autoplay loop>
+        <source src="bgm.mp3" type="audio/mpeg">
+        您的浏览器不支持音频元素。
+    </audio>
 
         <!-- 播放和暂停按钮 
         <div class="audio-controls">
