--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</br>
 		</br>
 		    <!-- 背景音乐 -->
-            <audio autoplay loop>
+            <audio src=bgm.mp3" autoplay>
         <source src="bgm.mp3" type="audio/mpeg">
         您的浏览器不支持音频元素。
     </audio>
