--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 	</head>
 	<body>
 		<div class="main-bg"/>
+		<!-- 背景音乐 -->
+            <audio id="background-music" loop>
+        <source src="bgm.mp3" type="audio/mpeg">
+        您的浏览器不支持音频元素。
+    </audio>
+
+        <!-- 播放和暂停按钮 -->
+        <div class="audio-controls">
+            <button type="button" onclick="document.getElementById('background-music').play()">播放</button>
+            <button type="button" onclick="document.getElementById('background-music').pause()">暂停</button>
+        </div>
 		<h1>jdzsc</h1>
 		<div class="sub-main-w3"/>
 		<div class="bg-content-w3pvt"/>
@@ -37,18 +48,7 @@
 
 		</br>
 		</br>
-		    <!-- 背景音乐 -->
-            <audio src=bgm.mp3" autoplay>
-        <source src="bgm.mp3" type="audio/mpeg">
-        您的浏览器不支持音频元素。
-    </audio>
-
-        <!-- 播放和暂停按钮 
-        <div class="audio-controls">
-            <button type="button" onclick="document.getElementById('background-music').play()">播放</button>
-            <button type="button" onclick="document.getElementById('background-music').pause()">暂停</button>
-        </div>
-    </div>-->
+    </div>
 	</body>
 </html>
 			
